fixed z-index issue with side panels and implemented better mini icon/user styles

--- a/dev/scss/base/_wrapper.scss
+++ b/dev/scss/base/_wrapper.scss
@@ -4,6 +4,8 @@
 // Defines toolbar layout and basic interactivity
 
 .escort-wrapper {
+  z-index: 0;
+  position: relative;
 
   /**
      * Offset the main content area based on the size of each escort region
@@ -18,6 +20,10 @@
 
         @if map-get($settings, position) == 'top' {
           margin-top: map-get($settings, size);
+
+          @if map-get($settings, position) == 'mini' {
+            margin-top: map-get($settings, size) * 1.66;
+          }
         }
 
         @if map-get($settings, position) == 'bottom' {
@@ -26,7 +32,7 @@
       }
 
       @if map-get($settings, position) == 'mini' {
-        margin-top: map-get($settings, size) * 1.75;
+        margin-top: map-get($settings, size) * 0.66;
       }
 
       @if map-get($settings, type) == 'vertical' {
