--- a/dev/scss/components/item/_item_mini.scss
+++ b/dev/scss/components/item/_item_mini.scss
@@ -9,7 +9,7 @@
   // }
 
   .escort-item {
-    line-height: $base-size * 0.75;
+    line-height: $base-size * 0.66;
   }
 
   .escort-link:not(.escort-add) { // sass-lint:disable-line force-pseudo-nesting
