--- a/dev/scss/components/user/_user_mini.scss
+++ b/dev/scss/components/user/_user_mini.scss
@@ -24,7 +24,7 @@
     }
 
     .escort-item {
-      height: $base-size * 0.75;
+      height: $base-size * 0.66;
     }
 
     .escort-image {
